<resources>
    <string name="app_name">Gojo study</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="user_name">Username</string>
    <string name="letStart">Welcome Back</string>
    <string name="secondLetStart">Login your existing Gojo Study</string>
    <string name="home">Home</string>
    <string name="exam">Exam</string>
    <string name="book">Book</string>
    <string name="profile">Profile</string>
    <string name="Pimage">Post Image</string>
    <string name="like">Like</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_title">Book Title</string>
    <string name="grade">Grade</string>
    <string name="book_icon">Book Icon</string>
    <string name="message">Messages</string>
    <string name="save_changes">Save Changes</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="new_password">New Password</string>
    <string name="edit_info">Edit Info</string>
    <string name="subject">Subject</string>
    <string name="type_a_message">Write a message...</string>
    <string name="n_a">N/A</string>
    <string name="account_data_info">Account Data Info</string>
</resources>