<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_margin="4dp"
    app:cardCornerRadius="20dp"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:padding="5dp"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_gravity="center"
            android:elevation="20dp"
            android:outlineAmbientShadowColor="@color/black"
            >

            <ImageView
                android:id="@+id/bookImage"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:scaleType="center"
                android:contentDescription="@string/book_icon" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="22dp"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/bookTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/book_title"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/bookGrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/grade"
                android:textSize="14sp"
                />

        </LinearLayout>
    </LinearLayout>






</androidx.cardview.widget.CardView>