<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        app:layoutDescription="@xml/activity_login_xml_constraintlayout_scene">
    >
    <ImageView
            android:id="@+id/app_logo"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_marginTop="42dp"
            android:src="@drawable/logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/letsStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:fontFamily="@font/sansita_bold_italic"
            android:text="@string/letStart"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_logo" />

        <TextView
            android:id="@+id/describe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/risque_regular"
            android:text="@string/secondLetStart"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/letsStart" />

        <EditText
            android:id="@+id/login_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/bar2"
            android:hint="@string/user_name"
            android:paddingLeft="35dp"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/describe"

            />

        <ImageView
            android:id="@+id/userImg"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="46dp"
            android:src="@drawable/user"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/login_phonenumber"
            app:layout_constraintTop_toBottomOf="@id/describe"
            app:layout_goneMarginRight="10dp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="45dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/bar2"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="35dp"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_phonenumber" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/login_password"
            app:layout_constraintTop_toBottomOf="@id/userImg" />


        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:padding="0dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_password" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="© 2026 HomeStudy. All rights reserved."
        android:textSize="12sp"
        android:textColor="@color/black_low"
        android:gravity="center"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="18dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>